# Barrios_Ponce_Jose_AEDCC232

./: README.md
Examen Parcial/: SolucionarioEP.md
Practicas/practica-calificada3/: .gitignore  CMakeLists.txt  README.MD
Practicas/practica-calificada3/benchmark/: benchmark.cpp
Practicas/practica-calificada3/demos/: demo_ingenua.cpp  demo_optima.cpp
Practicas/practica-calificada3/docs/: bitacora.md  respuestas_obligatorias.md
Practicas/practica-calificada3/include/: leer.h  solucion_ingenua.h  solucion_optima.h
Practicas/practica-calificada3/resultados/: casos_borde.txt  ejecucion_pc3.txt  tests_pc3.txt
Practicas/practica-calificada3/src/: leer.cpp  solucion_ingenua.cpp  solucion_optima.cpp
Practicas/practica-calificada3/tests/: test.cpp
semana3/: actividad3-CC232.md
semana4/: actividad4-CC232.md
semana5/: actividad5.md
